update code getPet, createPet, add To cart, update cart